--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 /* Header section */
 #main{
-    /* width: 90%; */
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,23 +16,37 @@
 
 
 header{
-    /* border: 1px solid black; */
-    border-radius: 10px;
     display: flex;
     flex-direction: row;
-    margin: 10px;
-    padding: 10px;
     justify-content: center;
     align-items: center;
 }
 
 
 
-.container{
-    border: 1px solid black;
+.container {
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    margin: 20px;
-    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: black;
+    font-weight: bold;
+    font-size: 2rem;
+    gap: 30px;
+}
+
+.container::before {
+    content: '';
+    background: url('./istockphoto-1610418898-2048x2048.jpg') no-repeat center center/cover;
+    position: absolute;
+    opacity: 0.35;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
 }
 
 .text{
@@ -241,10 +256,9 @@ header{
 }
 
 img{
-    width: 419px;
-    height: 225px;
-    border-radius: 10px;
-    margin: 8px;
+   height: 100%;
+   width: 100%;
+   opacity: 0.8;
 }
 
 #price{
@@ -299,7 +313,7 @@ img{
     opacity: 0.7;
 }
 
-@media (max-width : 1650px){
+/* @media (max-width : 1650px){
     header{
         width: 1332px;
     }
@@ -567,4 +581,4 @@ img{
         right: 100px;
         top: 393px;
     }
-}
+} */
